force-app/main/default/objects/TrainingGoal__c/TrainingGoal__c.object-meta.xml
<CustomObject>
    <description>利用者がAgentforceとの会話を通じて設定する週単位・期間単位の目標を管理するオブジェクト。</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi>
    <label>目標</label><nameField><label>目標名</label><type>Text</type></nameField><pluralLabel>目標</pluralLabel><sharingModel>Private</sharingModel>
</CustomObject>