force-app/main/default/objects/TrainingGoal__c/fields/EndDate__c.field-meta.xml
<CustomField><fullName>EndDate__c</fullName><label>終了日</label><required>false</required><type>Date</type></CustomField>