force-app/main/default/objects/TrainingGoal__c/fields/GoalType__c.field-meta.xml
<CustomField><fullName>GoalType__c</fullName><label>目標種別</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>習慣化</fullName><default>false</default><label>習慣化</label></value><value><fullName>回数達成</fullName><default>false</default><label>回数達成</label></value><value><fullName>継続日数</fullName><default>false</default><label>継続日数</label></value><value><fullName>体力向上</fullName><default>false</default><label>体力向上</label></value><value><fullName>筋力向上</fullName><default>false</default><label>筋力向上</label></value></valueSetDefinition></valueSet></CustomField>