force-app/main/default/objects/TrainingGoal__c/fields/Notes__c.field-meta.xml
<CustomField><fullName>Notes__c</fullName><label>メモ</label><length>32768</length><type>LongTextArea</type><visibleLines>5</visibleLines></CustomField>