force-app/main/default/objects/TrainingGoal__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>ステータス</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>未開始</fullName><default>true</default><label>未開始</label></value><value><fullName>進行中</fullName><default>false</default><label>進行中</label></value><value><fullName>達成</fullName><default>false</default><label>達成</label></value><value><fullName>未達成</fullName><default>false</default><label>未達成</label></value><value><fullName>中止</fullName><default>false</default><label>中止</label></value></valueSetDefinition></valueSet></CustomField>