force-app/main/default/objects/TrainingGoal__c/fields/TargetValue__c.field-meta.xml
<CustomField><fullName>TargetValue__c</fullName><label>目標値</label><precision>5</precision><required>false</required><scale>0</scale><type>Number</type></CustomField>