force-app/main/default/objects/TrainingGoal__c/fields/Trainee__c.field-meta.xml
<CustomField><fullName>Trainee__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>この目標を持つ利用者</description><label>利用者</label><referenceTo>Trainee__c</referenceTo><relationshipLabel>目標</relationshipLabel><relationshipName>TrainingGoals</relationshipName><required>false</required><type>Lookup</type></CustomField>