force-app/main/default/objects/TrainingGoal__c/fields/Unit__c.field-meta.xml
<CustomField><fullName>Unit__c</fullName><label>単位</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>回/週</fullName><default>false</default><label>回/週</label></value><value><fullName>回</fullName><default>false</default><label>回</label></value><value><fullName>日</fullName><default>false</default><label>日</label></value><value><fullName>分</fullName><default>false</default><label>分</label></value></valueSetDefinition></valueSet></CustomField>