force-app/main/default/objects/TrainingGoal__c/validationRules/EndDateAfterStartDate.validationRule-meta.xml
<ValidationRule><fullName>EndDateAfterStartDate</fullName><active>true</active><description>終了日が開始日より前になることを防止する。</description><errorConditionFormula>AND(NOT(ISBLANK(StartDate__c)), NOT(ISBLANK(EndDate__c)), EndDate__c &lt; StartDate__c)</errorConditionFormula><errorDisplayField>EndDate__c</errorDisplayField><errorMessage>終了日は開始日以降の日付を入力してください。</errorMessage></ValidationRule>